basic HTML done

--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
 	<script type="text/javascript" src="snake.js"></script>
 </head>
 <body>
-	<div id="gamespace">
-		content
+	<div id="main">
+		<div id="gamespace">
+			
+		</div>
 	</div>
 	<footer>
 		<p><a href="#">Robert Schabacker</a></p>
