now using HTML attributes to record state

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 		<div id="gamespace">
 			
 		</div>
+        <div id="scorediv">
+            <span id="score">Score: 5</span>
+        </div>
 	</div>
 	<footer>
 		<p><a href="#">Robert Schabacker</a></p>
