now starts with food particle

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			
 		</div>
         <div id="scorediv">
-            <span id="score">Score: 5</span>
+            <span id="score">Arrow Keys to move, Space to pause</span>
         </div>
 	</div>
 	<footer>
