added title and auto-pause on changing tab

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
+    <title>JSnake</title>
 	<link rel="stylesheet" type="text/css" href="styles.css"/>
 	<script type="text/javascript" src="snake.js"></script>
 </head>
